tests/tooling/fixtures/native/execution/negative/runtime_dispatch_unresolved_symbol.objc3
// Negative execution fixture: message-send lowering requires runtime dispatch shim at link time.
module RuntimeDispatchUnresolvedSymbol;

fn main() -> i32 {
  let receiver = 3;
  return [receiver ping];
}
